meu_projeto/static/styles.css
/* ... */
.channel-icon {
  width: 6vh;
  height: 6vh;
  border-radius: 5vh;
  margin-right: 1vh;
}

.channel-icon-large {
  width: 7vh;
  height: 7vh;
  border-radius: 5vh;
  margin-top: 2vh;
  margin-right: 2vh;
}

.channel-icon-largest {
  width: 20vh;
  height: 20vh;
  border-radius: 10vh;
  margin-top: 2vh;
  margin-left: 10vh;
  position: relative;
}

.channel-title-largest {
  font-size: 5vh;
  color: #F1F1F1;
  position: absolute;
  left: 70vh;
  top: 30vh;
}

.large-title-check {
  color: gold;
}

.channel-title-largest .material-symbols-outlined {
  font-size: 5vh;
  vertical-align: text-bottom;
  margin-bottom: 0.5vh;
}

.channel-description {
  color: #888;
}

h1 {
  color: #F1F1F1 !important;
  padding-top: 5vh;
}

.video-description {
  padding-top: 3vh;
  color: #888;
  white-space: pre-line;
  width: 100vh;
}

.channel-line {
  display: flex;
  width: 100%;
  text-align: middle !important;
}

.channel-line .channel-name  {
  padding-top: 3.5vh;
  font-weight: lighter;
  font-size: 2.5vh;
  margin-left: 1vh;
}

.channel-line .verified {
  position: relative;
  margin-left: 0.5vh;
  top: 4vh;
  color: #888;
  font-size: 2.5vh;
}

.channel-line img {
  position: relative;
  top: 3.5vh;
}

.episode-channel-title .material-symbols-outlined {
  font-size: 2vh;
  vertical-align: bottom;
  margin-bottom: 1.2vh;
}

.watched-button {
  display: flex;
  border-radius: 5vh;
  font-size: 2vh;
  height: 7vh;
  padding-top: 2vh;
  left: 165vh;
  top: 86vh;
  padding-left: 2.5vh;
  position: absolute;
  border: none;
  transition: transform 0.3s ease;
}

.watched-button:hover {
  transform: scale(1.1);
}

.watched-button p {
  color: black;
}

.watched {
  top: 2.5vh;
  margin-left: 1vh;
  color: #222;
  padding-right: 1vh;
}

.unwatched {
  margin-bottom: 2.5vh;
  margin-left: 1vh;
  color: #222;
  padding-right: 1vh;
}

.grayscale-img {
  filter:brightness(50%);
}

.watched-mark {
  position: fixed;
  margin-top: 8vh;
  margin-left: 10vh;
  color: #F1F1F1;
  z-index: 1;
}

.player-yt {
  position: static !important;
  overflow: hidden !important;
}

.channel-wallpaper {
  position: relative;
  margin-top: 0;
  width: 100%;
  height: 50%;
  max-height: 10%;
  background-size: cover;
  overflow: hidden;
}

.channel-title-test {
  display: inline;
  font-size: 6vh;
  padding-top: 2vh;
  color: #888;
}

.channel-title-test img {
  margin-right: 2vh;
  margin-bottom: 4vh;
}

.channel-title-test span {
  font-size: 5vh;
  position: relative;
  top: 0.5vh;
}

.channel-description-test {
  font-size: 2vh;
  color: #888;
  padding-left: 10vh;
  padding-top: 5vh;
  width: 90%;
}

.little-channel-title span {
  position: relative;
  font-size: 2vh;
  top: 0.3vh;
}

.little-channel-title {
  padding-top: 0vh;
  padding-left: 8vh;
  font-size: 1.8vh;
  display: inline;
  color: gray;
}

.info-position {
  position: relative;
  top: -2vh;
  left: 1vh;
}

.subscribers-video-player {
  position: relative;
  top: -2vh;
  left: 8vh;
  color: #888;
}

.channel-subtitle {
  position: relative;
  top: -7vh;
  left: 34vh;
  font-size: 2vh;
  color: #888;
  width: 50% !important;
}

.channel-list-title {
  position: relative;
  left: 35vh;
  top: -20vh;
  font-size: 3vh;
  display: inline;
  color: #888;
}

.channel-list-title span {
  position: relative;
  font-size: 3vh;
  top: 0.5vh;
}

.channel-list-subscribers {
  font-size: 2vh;
  color: #888;
  position: relative;
  left: 35vh;
  top: -18vh;
}

.channel-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding-top: 1.5vh;
  padding-left: 1.5vh;
  font-size: 2vh;
}

